- bugfix: immark did not have MARK flags set...
- added x-info field to rsyslogd startup/shutdown message. Hopefully
  points users to right location for further info (many don't even know
  they run rsyslog ;))
- bugfix: trailing ":" of tag was lost while parsing legacy syslog messages
  without timestamp - thanks to Anders Blomdell for providing a patch!
---------------------------------------------------------------------------
Version 3.11.0 (rgerhards), 2008-01-31
- implemented queued actions
- implemented simple rate limiting for actions
- implemented deliberate discarding of lower priority messages over higher
  priority ones when a queue runs out of space
- implemented disk quotas for disk queues
- implemented the $ActionResumeRetryCount config directive
- added $ActionQueueFilename config directive
- added $ActionQueueSize config directive
- added $ActionQueueHighWaterMark config directive
- added $ActionQueueLowWaterMark config directive
- added $ActionQueueDiscardMark config directive
- added $ActionQueueDiscardSeverity config directive
- added $ActionQueueCheckpointInterval config directive
- added $ActionQueueType config directive
- added $ActionQueueWorkerThreads config directive
- added $ActionQueueTimeoutshutdown config directive
- added $ActionQueueTimeoutActionCompletion config directive
- added $ActionQueueTimeoutenQueue config directive
- added $ActionQueueTimeoutworkerThreadShutdown config directive
- added $ActionQueueWorkerThreadMinimumMessages config directive
- added $ActionQueueMaxFileSize config directive
- added $ActionQueueSaveonShutdown config directive
- addded $ActionQueueDequeueSlowdown config directive
- addded $MainMsgQueueDequeueSlowdown config directive
- bugfix: added forgotten docs to package
- improved debugging support
- fixed a bug that caused $MainMsgQueueCheckpointInterval to work incorrectly
- when a long-running action needs to be cancelled on shutdown, the message